network-policy/senario-2/backend-to-database.yaml
# pod with app=backend lable can communicate with only app:database lable and only in port 3306 in the namespace myapp
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-database
  namespace: myapp
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: myapp
      podSelector:
        matchLabels:
          app: database
    ports:
    - protocol: TCP
      port: 3306
---
# We must create ingress policy from backend to frontend pod for allow communication. Without ingress NP will not work
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-to-backend
  namespace: myapp
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: myapp
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 3306
