network-policy/senario-2/frontend-to-backend.yaml
# pod with app=frontend lable can communicate with only app:backend lable and only in port 80 in the namespace myapp
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-backend
  namespace: myapp
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:  
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: myapp         # If we dont put the namespace selector other namespace can create pod with same labe can communicate.
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 8080
---
# We must create ingress policy from backend to frontend pod for allow communication. Without ingress NP will not work
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-frondend
  namespace: myapp
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: myapp         # If we dont put the namespace selector other namespace can create pod with same labe can communicate.
      podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 8080
